force-app/main/default/objects/SVMXC__SVMX_Optimizer__c/SVMXC__SVMX_Optimizer__c.object-meta.xml
<CustomObject>
    <description>The purpose of this object is to store the additional optimizer specific attributes, statuses. The object is designed to be generic in nature to be extended to support any object. For now it will be used for non-work order events but can be applied to technician, Skill or event Work Order.</description>
    <label>Optimizer Transaction</label>
    <nameField>
        <displayFormat>O-{00000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Optimizer Transactions</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>