force-app/main/default/objects/SVMXC__SVMX_Optimizer__c/fields/SVMXC__Optimizer_Connection_ID__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Optimizer_Connection_ID__c</fullName>
    <description>This field stores territory and dispatch process SFDC Id as OptiMax ECO Job identification purpose</description>
    <inlineHelpText>This field stores territory and dispatch process SFDC Id as OptiMax ECO Job identification purpose</inlineHelpText>
    <label>Optimizer Connection Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>