force-app/main/default/objects/SVMXC__SVMX_Optimizer__c/fields/SVMXC__Optimizer_Error_Text__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Optimizer_Error_Text__c</fullName>
    <description>ServicePower specific message</description>
    <inlineHelpText>ServicePower specific message</inlineHelpText>
    <label>Optimizer Error Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>