force-app/main/default/objects/SVMXC__SVMX_Optimizer__c/fields/SVMXC__SM_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__SM_Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>SVMXC__Service_Order__c</referenceTo>
    <relationshipLabel>Optimizer Transactions</relationshipLabel>
    <relationshipName>Optimizer_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>