force-app/main/default/objects/SVMXC__SVMX_Optimizer__c/fields/SVMXC__WhatId__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__WhatId__c</fullName>
    <description>SalesForce Id of the object</description>
    <inlineHelpText>SalesForce Id of the object</inlineHelpText>
    <label>WhatId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>