force-app/main/default/objects/SVMXC__SVMX_Optimizer__c/fields/SVMXC__WhatType__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__WhatType__c</fullName>
    <description>What is the object type (Event, SVMX Event, Work Order, Technician or Skill)</description>
    <inlineHelpText>What is the object type (Event, SVMX Event, Work Order, Technician or Skill)</inlineHelpText>
    <label>WhatType</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Work Order</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>SVMX Event</fullName>
            </value>
            <value>
                <fullName>Technician</fullName>
            </value>
            <value>
                <fullName>Skill</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>